--- a/index.html
+++ b/index.html
@@ -1,107 +1,56 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-	<head>
-		<meta http-equiv="content-type" content="text/html,charset=utf-8" />
-		<title>寻程PROSPECT</title>
-		<link rel="stylesheet" href="css/index_css.css" />
-		<link href="img/icon.ico" rel="shortcut icon" />
-	</head>
-	<body>
-		<!--===页眉开始===-->
-		<header>
-			<nav>
-				<ul>
-					<li><a href="">消息中心</a></li>
-					<li><a href="">系统设置</a></li>
-					<li><a href="">安全退出</a></li>
-				</ul>
-			</nav>
-		<div class="sec_head">
-			<img src="img/logo_index.png" alt="logo" title="寻程" width="40px" height="40px"/>
-			<ul>
-				<li><a href="">首页</a></li>
-				<li><a href="">发职位</a></li>
-				<li><a href="">找简历</a></li>
-				<li><a href="">职位管理</a></li>
-				<li><a href="">数据报告</a></li>					
-			</ul>
-		</div>
-		</header>
-		<!--===页眉结束===-->
-		<div class="main">
-			<img src="img/prospect-writting-png.png" />
-			<!--===主要区域开始===-->
-			<main>
-				<!--===主要区域第一部分===-->
-				<div class="main_firs">
-					<div class="main_button" id="main_tab1">
-						<h3>新应聘简历</h3>
-						<p>范文1范文1范文1范文1范文1范文1范文1范文1范文1范文1范文1范文1范文1</p>
-					</div>
-					<div class="main_button" id="main_tab2">
-						<h3>新推荐简历</h3>
-						<p>范文2范文2范文2范文2范文2范文2范文2范文2范文2范文2范文2范文2范文2</p>
-					</div>
-					<div class="main_button" id="main_tab3">
-						<h3>意向沟通</h3>
-						<p>范文3范文3范文3范文3范文3范文3范文3范文3范文3范文3范文3范文3范文3</p>
-					</div>
-					<div class="main_button" id="main_tab4">
-						<h3>学校推荐</h3>
-						<p>范文4范文4范文4范文4范文4范文4范文4范文4范文4范文4范文4范文4范文4</p>
-					</div>				
-				</div>
-				<!--===主要区域第一部分结束===-->
-				<!--===主要区域第二部分===-->
-				<div class="main_sec">
-					<h3>这个是主页的第二栏</h3>
-				</div>
-				<!--===主要区域第二部分结束===-->
-			</main>
-			<!--===主要区域结束===-->
-		
-		
-			<!--===附注栏开始==-->
-			<aside>
-				<div>
-					<p>这个是侧边栏</p>
-					<img src="img/png.png"  />
-				</div>
-				<div>
-					
-				</div>
-				<div>
-					
-				</div>
-			</aside>
-			<!--===附注栏结束==-->			
-		</div>
-	
-	
-		<!--===页脚开始==-->
-		<footer>
-			<div class="footer_tel">
-				<img src="img/footer_tel.png" width="10px" height="10px" \>
-				<span><small>服务热线:400-1437-400</small></span>
-			</div>
-			<div class="footer_oth">
-				<nav>
-					<ul>
-						<li><a href="">寻程网简介</a></li>
-						<li><a href="">加入寻程网</a></li>
-						<li><a href="">用户协议</a></li>
-						<li><a href="">媒体报道</a></li>
-						<li><a href="">联系我们</a></li>
-						<li><a href="">网站地图</a></li>
-						<li><a href="">网站合作</a></li>
-						<li><a href="">意见反馈</a></li>
-					</ul>
-				</nav>
-				<p><small>沪ICP备09082509号 沪ICP证07419号 人才服务许可证:RC0908123&nbsp;&nbsp;沪公网安备:11010502026763</small></p>
-				<p><small>Copytright &copy; 2000-2016 xunchen.com All Rights Reserved</small></p>
-			</div>
-		</footer>
-		<!--===页脚结束==-->
-		<script type="text/javascript" src="js/js.js"></script>
-	</body>
+<head>
+	<meta http-equiv="content-type" content="text/html,charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>寻程PROSPECT</title>
+	<link href="img/icon.ico" rel="shortcut icon" />
+	<style type="text/css">
+	body{
+		margin: 0;
+		height: 100%;
+	}
+	img{
+		border: 0;
+		padding: 0;
+		margin:0;
+		float:left;
+		width:100%;
+		height:100%;
+	}
+	.login{
+		position: absolute;
+		top:20%;
+		width: 60%;
+		height: 100%;
+		left:20%;
+		background-color:rgba(255, 251, 240,0.5);
+	}
+	.loginbtn{
+		position: relative;
+		left:35%;
+		top:40%;
+		margin: 10px;
+		width: 200px;
+		height: 50px;
+		background-color: green;
+	}
+	</style>
+</head>
+<body>
+<img src="img/index.jpg" />
+<div class="login">
+	<button onclick="loginit(1)" class="loginbtn">个人登录</button><br/>
+	<button onclick="loginit(0)" class="loginbtn">企业登录</button>
+</div>
+<script type="text/javascript">
+function loginit(a){
+	if(a){
+		window.open("personal/index_start.html","_self");
+	}else{
+		window.open("company/index_start.html","_self");
+	}
+}
+</script>
+</body>
 </html>
