--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="content-type" content="text/html,charset=utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>寻程PROSPECT</title>
 	<link href="img/icon.ico" rel="shortcut icon" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
