--- a/company/index_start.html
+++ b/company/index_start.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="content-type" content="text/html,charset=utf-8" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>寻程PROSPECT</title>
 	<link href="img/icon.ico" rel="shortcut icon" />
-	<style type="text/css">
-	img{
-		border: 0;
-		padding: 0;
-		margin:0;
-	}
-	body{
-		margin: 0;
-		height: 100%;
-	}
-	</style>
+	<link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/index_css.css"/>
 </head>
 <body>
-<img src="img/index_start.jpg" width="100%" height="100%" />
-<script type="text/javascript">
-	window.onclick=function(){
-		window.open("index.html","_self");
-	}
-</script>
+	<script type="text/javascript" src="../js/lib/sea-debug.js"></script>
+	<script type="text/javascript">
+		// sea.js配置
+		seajs.config({
+			alias: {
+			    'jq' : 'jquery-3.1.1.js',
+			    'bs' : 'bootstrap.js'
+			}
+		});
+		// 加载入口文件
+		seajs.use('./js/pl/index_start/init', function(init) {
+			init.run();
+		});
+	</script>
+
+
 </body>
 </html>
